# stupid-2fa

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
src/: lib.rs
