[package]
name = "stupid-2fa"
version = "0.1.0"
edition = "2021"
authors = ["Natan Castro <castro.natan@outlook.com>"]
description = "A simple way to authenticate client app without cloud"
license = "MIT"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
hmac = "0.12.1"
sha2 = "0.10.8"
time = "0.3.36"

[dependencies.uuid]
version = "1.10.0"
features = ["v4"]
